--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.20.1"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.8"
   }
 }
